# ehr

./: .env.development  .gitignore  .prettierrc.json  CHANGELOG.md  Dockerfile.windows  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml  test-build-only.yml
.zed/: settings.json
src/: App.tsx  main.tsx
src-tauri/: .env  .env.example  .env.production  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  fs.json
src-tauri/resources/: config.json
src-tauri/src/: alert.rs  alert_tables.rs  appointment.rs  appointment_tables.rs  auth.rs  common_tables.rs  db.rs  db_vision.rs  doctors.rs  file.rs  lib.rs  main.rs  messaging.rs  messaging_tables.rs  patient_tables.rs  patients.rs  vision.rs  vision_tables.rs
src/common-components/: CustomButton.tsx  ToggleButton.tsx
src/components/: AllRoutes.tsx  Appointments.tsx  Canvas.tsx  PatientActivityCard.tsx  PatientCard.tsx  PatientDoctorNotesCard.tsx  PatientHistoryCard.tsx  PatientList.tsx  PatientProcedureGrid.tsx  PatientSummaryCard.tsx  ProcedureDetailsModal.tsx  ProcedureListArc.tsx  ProtectedRoute.tsx  UpdateComponent.tsx
src/components/canvas/: ControlPanel.tsx
src/components/doctor-dashboard/: Alerts.tsx  Appointments.tsx  Header.tsx  InstantMessaging.tsx  WeatherWidget.tsx
src/pages/: ConsultantPage.tsx  Dashboard.tsx  LoginPage.tsx  OpticsCanvasPage.tsx  PatientDetails.tsx  PatientOptics.tsx  PatientProcedurePage.tsx  SignupPage.tsx  UnderConstruction.tsx
src/redux/: store.ts
src/theme/: chakraTheme.ts  muiTheme.ts
src/utils/: utils.ts
(+10 files in other folders)
